Corrected width and margins of popup headers to minimize the occurence of title clipping.

--- a/src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
@@ -213,6 +213,14 @@ table {
 	}
 }
 
+.ui-header {
+	.ui-title {
+		min-width: 180px;
+		margin-left: 35px;
+		margin-right: 35px;
+	}
+}
+
 %background-efefef {
 	background: #efefef;
 }
